# rustsample

./: DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: rustsample.R
man/: rsample.Rd  rustsample.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs  urn.rs
