[package]
name = "rustsample"
version = "0.1.0"
authors = ["Tommy Jones <jones.thos.w@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.1.11"
rand = "*"

# Once extendr 0.1.11 is on crates.io the entire remaining part
# of this file can be deleted.
[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr" }
extendr-engine = { git = "https://github.com/extendr/extendr" }
extendr-macros = { git = "https://github.com/extendr/extendr" }
libR-sys = { git = "https://github.com/extendr/libR-sys" }
